react.ts Sample: fetching and saving the record (completed the task).

--- a/tsreact/lang/en.json
+++ b/tsreact/lang/en.json
@@ -1,4 +1,5 @@
 {
   "ROOT_TITLE": "Clinical Table Search",
-  "SEARCH_TOTAL": "Total results: ${total}"
+  "SEARCH_TOTAL": "Total results: ${total}",
+  "RECORD_BACK": "Back"
 }
